# ecommerce-python

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  compose.yaml  plan.md  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_create_ecommerce_schema.py
app/: main.py
app/api/: admin_products.py  auth.py  cart.py  orders.py  products.py
app/core/: config.py
app/data/: products.py
app/db/: init_db.py  session.py
app/models/: cart.py  order.py  product.py  user.py
app/repositories/: cart.py  orders.py  products.py  users.py
app/schemas/: cart.py  order.py  product.py  user.py
app/security/: auth.py  passwords.py  tokens.py
scripts/: start.sh
tests/: test_admin_products.py  test_auth.py  test_cart.py  test_database.py  test_deployment_config.py  test_orders.py  test_postgres_migration.py  test_products.py  test_tokens.py  test_users.py
